# tauri-plugin-theme

./: .gitignore  .taurignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  vite.config.ts
.github/workflows/: ci.yml
example/: package.json  pnpm-lock.yaml  vite.config.ts
example/src/: index.html  main.ts
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/src/: main.rs
examples/app/: package.json  vite.config.ts
examples/app/src/: main.ts
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/src/: main.rs
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: index.html  lib.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  theme.json
src-tauri/capabilities/schemas/: capabilities.json  desktop-schema.json  plugin-manifests.json
src-tauri/src/: main.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tauri-plugin-theme/: Cargo.toml  build.rs
tauri-plugin-theme/permissions/autogenerated/: reference.md
tauri-plugin-theme/permissions/autogenerated/commands/: get_theme.toml
tauri-plugin-theme/permissions/schemas/: schema.json
tauri-plugin-theme/src/: lib.rs
tauri-plugin-theme/src/platform/: linux.rs  macos.rs  windows.rs
tauri-v1/: README.md
tauri-v1/src/platform/: linux.rs
tauri-v2/: Cargo.toml  build.rs
tauri-v2/permissions/: default.toml
tauri-v2/permissions/autogenerated/: reference.md
tauri-v2/permissions/autogenerated/commands/: set_theme.toml
tauri-v2/src/: lib.rs
tauri-v2/src/platform/: macos.rs  windows.rs
webview-src/: index.ts
