[package]
name = "tauri-plugin-theme"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wyhaya/tauri-plugin-theme"
description = "Dynamically change Tauri App theme"
keywords = ["tauri", "plugin", "theme"]
readme = "README.md"

[dependencies]
tauri = "1"
serde = { version = "1.0", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.15"
tintanum = "0.1"
futures-lite = "2.3"
tokio = { version = "1", features = ["macros"] }

[target."cfg(target_os = \"windows\")".dependencies]
