[package]
name = "tauri-plugin-theme"
links = "tauri-plugin-theme"
version = "2.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/wyhaya/tauri-plugin-theme"
description = "Dynamically change Tauri App theme"
keywords = ["tauri", "plugin", "theme"]
readme = "README.md"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
dirs-next = "2.0"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
tintanum = "0.1"
futures-lite = "2.3"
tokio = { version = "1", features = ["macros"] }

[target."cfg(target_os = \"windows\")".dependencies]
dirs-next = "2.0"
webview2-com = "0.33"
windows = "0.58"
windows-core = "0.58"
windows-version = "0.1"
 
