[package]
name = "example"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-theme = { path = "../tauri-plugin-theme" }

[features]
custom-protocol = ["tauri/custom-protocol"]
