[package]
name = "example"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.19", features = [] }
tauri-plugin-dialog = "2.0.0-beta.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-theme = { path = "../tauri-plugin-theme" }

[features]
custom-protocol = ["tauri/custom-protocol"]
