[package]
name = "tauri-plugin-theme"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/wyhaya/tauri-plugin-theme"
description = "Dynamically change Tauri App theme"
keywords = ["tauri", "plugin", "theme"]
readme = "README.md"

[dependencies]
tauri = { version = "2.0.0-alpha" }
serde = { version = "1", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
tintanum = "0.1"
futures-lite = "2.0"
tokio = { version = "1", features = ["macros"] }
once_cell = "1.18"

[target."cfg(target_os = \"windows\")".dependencies]
dirs-next = "2.0"