[package]
name = "example"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-theme = { path = "../../tauri-plugin-theme" }

[features]
custom-protocol = ["tauri/custom-protocol"]
